# voting-system-analysis

./: Cargo.toml  README.md  pyproject.toml
src/: main.py  main.rs  tests.rs
