[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voting-system-analysis"
version = "0.1.0"
description = "Voting system analysis tools"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.5",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
